--- a/index_en.html
+++ b/index_en.html
@@ -58,8 +58,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom smart-scroll">
         <div class="container-xl py-2">
             <a class="navbar-brand d-flex align-items-center gap-2" href="index_en.html">
-                <img src="static/images/main/logo_small.png" alt="Element Swimming Logo" width="42"
-                    height="36">
+                <img src="static/images/main/logo_small.png" alt="Element Swimming Logo" width="42" height="36">
                 <div class="d-flex align-items-center lh-1">
                     <span class="brand-element">Element</span>
                     <span class="brand-swimming">Swimming</span>
@@ -94,9 +93,11 @@
             <div class="row align-items-center w-100 m-0">
                 <div class="col-lg-5 py-4 px-0">
                     <h5 class="text-uppercase text-primary fw-bold mb-4">In the pool? Only with us!</h5>
-                    <h1 class="display-3 fw-bold mb-3">Swim training <br><span class="brand-gradient">for the 21st century </span></h1>
+                    <h1 class="display-3 fw-bold mb-3">Swim training <br><span class="brand-gradient">for the 21st
+                            century </span></h1>
                     <p class="lead mb-4 text-muted">
-A modern training process based on current trends and led by university-educated professionals.</p>
+                        A modern training process based on current trends and led by university-educated professionals.
+                    </p>
                     <div class="d-flex flex-wrap gap-3 pt-3">
                         <a
                             href="https://docs.google.com/forms/d/e/1FAIpQLSd-ylb1KfJQ963AjNXsysBp5Y0_qswA8yPwRxJX5amgg4WK2Q/viewform">
@@ -121,7 +122,8 @@ A modern training process based on current trends and led by university-educated
         <div class="glass-panel text-center">
             <h3 class="fw-normal lh-base mb-0">
                 <span class="text-primary fw-bold">Our vision is to teach you</span>, our clients, to <span
-                    class="text-primary fw-bold">swim</span> correctly and <span class="text-primary fw-bold">effectively.</span>
+                    class="text-primary fw-bold">swim</span> correctly and <span
+                    class="text-primary fw-bold">effectively.</span>
             </h3>
         </div>
     </div>
@@ -137,7 +139,8 @@ A modern training process based on current trends and led by university-educated
                 <div class="col-lg-7" data-aos="fade-right">
                     <h2 class="display-5 fw-bold mb-4">About</h2>
                     <p class="lead mb-5 text-secondary" style="text-align:justify;">
-                        <span class="text-primary fw-bold">Element Swimming</span> was founded by Dominik Vavrečka and has been pushing
+                        <span class="text-primary fw-bold">Element Swimming</span> was founded by Dominik Vavrečka and
+                        has been pushing
                         the boundaries of Czech training since 2019.
                         <br><br>
                         Dominik is an athlete through and through. He applies the experience
@@ -207,7 +210,8 @@ A modern training process based on current trends and led by university-educated
                 we believe in an individual approach and work only with certified ČSPS coaches.
                 <br>
                 We offer tailored swimming services in
-                <span class="fw-bold">Prague, Brno, Ostrava, Olomouc, Mladá Boleslav</span>, and <span class="fw-bold">Online</span>.
+                <span class="fw-bold">Prague, Brno, Ostrava, Olomouc, Mladá Boleslav</span>, and <span
+                    class="fw-bold">Online</span>.
                 <br>
                 <span class="fw-bold">For more information and pricing, select your city below</span>.
             </p>
@@ -258,8 +262,8 @@ A modern training process based on current trends and led by university-educated
                 </button>
             </div>
             <div class="col" data-aos="flip-left" data-aos-delay="400">
-                <button id="mlada_boleslav" class="service-card-btn" data-bs-toggle="modal" data-bs-target="#MladaBoleslavModal"
-                    aria-label="Mladá Boleslav">
+                <button id="mlada_boleslav" class="service-card-btn" data-bs-toggle="modal"
+                    data-bs-target="#MladaBoleslavModal" aria-label="Mladá Boleslav">
                     <div class="service-card"
                         style="background: url('static/images/services/mlada_boleslav.webp') center/cover no-repeat;">
                         <div class="service-overlay">
@@ -505,25 +509,38 @@ A modern training process based on current trends and led by university-educated
     <!-- Footer Modern -->
     <footer class="footer-modern">
         <div class="container-xl">
-            <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
-                <div class="mb-3 mb-md-0 small text-muted">
-                    &copy; 2026 Element Swimming &mdash;
-                    <a class="text-muted text-decoration-none"
-                        href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a>
+            <div class="row align-items-center gy-3">
+                <div class="col-md-4 text-center text-md-start order-2 order-md-1">
+                    <div class="small text-muted">
+                        &copy; 2026 Element Swimming &mdash;
+                        <a class="text-muted text-decoration-none"
+                            href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a>
+                    </div>
                 </div>
-                <a href="/" class="mb-3 mb-md-0">
-                    <img src="static/images/main/logo_small.png" alt="Element Swimming Logo" width="42"
-                        height="36">
-                </a>
-                <ul class="nav justify-content-end">
-                    <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">About</a></li>
-                    <li class="nav-item"><a href="#services" class="nav-link px-2 text-muted">Services</a></li>
-                    <li class="nav-item"><a href="#career" class="nav-link px-2 text-muted">Career</a></li>
-                    <li class="nav-item"><a href="#contact" class="nav-link px-2 text-muted">Contact</a></li>
-                </ul>
+
+                <div class="col-md-4 text-center order-1 order-md-2">
+                    <a href="/" class="d-block mb-3 mb-md-0">
+                        <img src="static/images/main/logo_small.png" alt="Element Swimming Logo" width="42" height="36">
+                    </a>
+                </div>
+
+                <div class="col-md-4 order-3 order-md-3">
+                    <ul class="nav justify-content-center justify-content-md-end">
+                        <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">About</a></li>
+                        <li class="nav-item"><a href="#services" class="nav-link px-2 text-muted">Services</a></li>
+                        <li class="nav-item"><a href="#career" class="nav-link px-2 text-muted">Career</a></li>
+                        <li class="nav-item"><a href="#contact" class="nav-link px-2 text-muted">Contact</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
+
+    <!-- Cookie Preferences Button -->
+    <div class="container-xl text-center pb-4">
+        <a href="#" id="open_preferences_center" class="btn-modern-outline btn-sm text-decoration-none border-0 py-0"
+            style="font-size: 0.75rem; opacity: 0.7;">Update cookies preferences</a>
+    </div>
 
     <!-- PRAGUE MODAL -->
     <div class="modal fade" id="PragueModal" tabindex="-1" aria-labelledby="PragueModal" aria-hidden="true">
@@ -749,7 +766,8 @@ A modern training process based on current trends and led by university-educated
         </div>
     </div>
     <!-- MLADA BOLESLAV MODAL -->
-    <div class="modal fade" id="MladaBoleslavModal" tabindex="-1" aria-labelledby="MladaBoleslavModal" aria-hidden="true">
+    <div class="modal fade" id="MladaBoleslavModal" tabindex="-1" aria-labelledby="MladaBoleslavModal"
+        aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content px-2">
                 <div class="modal-header border-0">
@@ -885,11 +903,12 @@ A modern training process based on current trends and led by university-educated
     </script>
 </body>
 <!-- Cookie Consent by TermsFeed https://www.TermsFeed.com -->
-<script type="text/javascript" src="https://www.termsfeed.com/public/cookie-consent/4.2.0/cookie-consent.js" charset="UTF-8"></script>
+<script type="text/javascript" src="https://www.termsfeed.com/public/cookie-consent/4.2.0/cookie-consent.js"
+    charset="UTF-8"></script>
 <script type="text/javascript" charset="UTF-8">
-document.addEventListener('DOMContentLoaded', function () {
-cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palette":"light","language":"en","page_load_consent_levels":["strictly-necessary"],"notice_banner_reject_button_hide":false,"preferences_center_close_button_hide":false,"page_refresh_confirmation_buttons":false,"website_name":"https://www.elementswimming.cz"});
-});
+    document.addEventListener('DOMContentLoaded', function () {
+        cookieconsent.run({ "notice_banner_type": "simple", "consent_type": "express", "palette": "light", "language": "en", "page_load_consent_levels": ["strictly-necessary"], "notice_banner_reject_button_hide": false, "preferences_center_close_button_hide": false, "page_refresh_confirmation_buttons": false, "website_name": "https://www.elementswimming.cz" });
+    });
 </script>
 
 <!-- Google Analytics -->
@@ -906,6 +925,8 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
 <noscript>Free cookie consent management tool by <a href="https://www.termsfeed.com/">TermsFeed</a></noscript>
 <!-- End Cookie Consent by TermsFeed https://www.TermsFeed.com -->
 
+
+
 <!-- Credits
   Service section photos:
     Prague - Photo by JESHOOTS.com from Pexels
@@ -914,4 +935,5 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
     Online - Photo by Pixabay from Pexels
     Mladá Boleslav - By Michaela zemlickova - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=114845115
   -->
+
 </html>
